--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <script src="script.js" async></script>
-  <title>Mix-Or-Match</title>
+  <title>Game Card</title>
 </head>
 <body>
-  <h1 class="page-title">Mix-Or-Match</h1>
+  <h1 class="page-title">Game Card</h1>
   <div class="overlay-text visible">
     Click to Start
   </div>
