--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <script src="script.js" async></script>
-  <title>Game Card</title>
+  <title>9B Nam Bình</title>
 </head>
 <body>
   <h1 class="page-title">My Friends</h1>
